[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Underworld_Tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Off-Shoots/RemoveReward.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Off-Shoots/fifftyfifftyfight.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.5, 56 )

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -851966, 0, 0, -851965, 0, 0, -851964, 0, 0, -851963, 0, 0, -851962, 0, 0, -851961, 0, 0, -851960, 0, 0, -786431, 0, 0, -786430, 0, 0, -786429, 1, 0, -786428, 1, 0, -786427, 1, 0, -786426, 1, 0, -786425, 1, 0, -786424, 0, 0, -786423, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 1, 0, -720893, 3, 0, -720892, 3, 0, -720891, 1, 0, -720890, 3, 0, -720889, 3, 0, -720888, 1, 0, -720887, 0, 0, -720886, 0, 0, -655360, 0, 0, -655359, 1, 0, -655358, 1, 0, -655357, 3, 0, -655356, 3, 0, -655355, 1, 0, -655354, 3, 0, -655353, 3, 0, -655352, 1, 0, -655351, 1, 0, -655350, 0, 0, -589824, 0, 0, -589823, 1, 0, -589822, 0, 0, -589821, 1, 0, -589820, 1, 0, -589819, 1, 0, -589818, 1, 0, -589817, 1, 0, -589816, 0, 0, -589815, 1, 0, -589814, 0, 0, -524288, 0, 0, -524287, 1, 0, -524286, 1, 0, -524285, 1, 0, -524284, 1, 0, -524283, 1, 0, -524282, 1, 0, -524281, 1, 0, -524280, 1, 0, -524279, 1, 0, -524278, 0, 0, -458752, 0, 0, -458751, 1, 0, -458750, 0, 0, -458749, 1, 0, -458748, 1, 0, -458747, 1, 0, -458746, 1, 0, -458745, 1, 0, -458744, 0, 0, -458743, 1, 0, -458742, 0, 0, -393216, 0, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -393210, 1, 0, -393209, 1, 0, -393208, 1, 0, -393207, 1, 0, -393206, 0, 0, -327680, 0, 0, -327679, 1, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 1, 0, -327674, 1, 0, -327673, 1, 0, -327672, 1, 0, -327671, 1, 0, -327670, 0, 0, -262144, 0, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 0, 0, -196608, 0, 0, -196607, 1, 0, -196606, 0, 0, -196605, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 0, 0, -196599, 1, 0, -196598, 0, 0, -131072, 0, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 0, 0, -65536, 0, 0, -65535, 1, 0, -65534, 0, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 0, 0, -65527, 1, 0, -65526, 0, 0, 0, 0, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 0, 0, 65536, 0, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 0, 0, 196608, 0, 0, 196609, 1, 0, 196610, 0, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 0, 0, 196617, 1, 0, 196618, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 0, 0, 327680, 0, 0, 327681, 1, 0, 327682, 0, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 0, 0, 327689, 1, 0, 327690, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 0, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 0, 0, 524288, 0, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0 )

[node name="KinematicPlayer2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 352, 544 )

[node name="Switches" type="Node2D" parent="."]

[node name="Fight" type="Area2D" parent="Switches"]
position = Vector2( 203, -694 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Switches/Fight"]
position = Vector2( 52.5, 53 )
shape = SubResource( 1 )

[node name="SpawnOne" type="Position2D" parent="Switches/Fight/CollisionShape2D"]
position = Vector2( -159.5, 1075 )

[node name="SpawnTwo" type="Position2D" parent="Switches/Fight/CollisionShape2D"]
position = Vector2( 364.5, 1088 )

[node name="Reward" type="Area2D" parent="Switches"]
position = Vector2( 396, -693 )
script = ExtResource( 4 )

[node name="Reward_Collision" type="CollisionShape2D" parent="Switches/Reward"]
position = Vector2( 52.5, 53 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Switches/Fight" to="Switches/Fight" method="_on_Fight_body_entered"]
[connection signal="body_exited" from="Switches/Fight" to="Switches/Fight" method="_on_Fight_body_exited"]
[connection signal="body_entered" from="Switches/Reward" to="KinematicPlayer2D" method="_on_Reward_body_entered"]
[connection signal="body_exited" from="Switches/Reward" to="Switches/Reward" method="_on_Reward_body_exited"]
